Add BackupIncumbentScope to set incumbent realm

Incumbent realm was not designated for content attribute, so this CL
sets event target's realm to incumbent realm.

Bug: 893951
Change-Id: If7f526907dae803cd875d70ed79c9ee288df72a9
Reviewed-on: https://chromium-review.googlesource.com/c/1276406
Commit-Queue: Yuki Yamada <yukiy@google.com>
Commit-Queue: Yuki Shiino <yukishiino@chromium.org>
Reviewed-by: Yuki Shiino <yukishiino@chromium.org>
Cr-Commit-Position: refs/heads/master@{#598762}
Former-commit-id: ccdbf121ebade5aee337d4498a6705bc20dee8a6